<resources>
    <string name="app_name">Intercambium</string>
    <string name="add_edit_ad_parent_activity_name" translatable="false" />
    <string name="title_home">Inicio</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Perfil</string>
    <string name="hint_title">Título</string>
    <string name="hint_description">Descripción</string>
    <string name="hint_province">Provincia</string>
    <string name="hint_edit_image">Editar imagen</string>
    <string name="menu_sign_out">Cerrar sesión</string>
    <string name="menu_sign_out_title">¿Quiere cerrar sesión?</string>
    <string name="signed_out">Ha cerrado la sesión</string>
    <string name="edit_image_gallery">Galería</string>
    <string name="edit_image_photo">Foto</string>
    <string name="edit_image_title">Elija una opción para añadir la imagen</string>
    <string name="save">Guardar</string>
    <string name="error_title_min_length">El título es demasiado corto (mín. %1$d caracteres)</string>
    <string name="error_title_max_length">El título es demasiado largo (%1$d caracteres de %2$d)</string>
    <string name="error_desc_min_length">La descripción es demasiado corta (mín. %1$d caracteres)</string>
    <string name="error_desc_max_length">La descripción es demasiado larga (%1$d caracteres de %2$d)</string>
    <string name="error_invalid_province_name">El nombre es inválido</string>
    <string name="error_name_too_short">El nombre es demasiado corto (mín. %1$d caracteres)</string>
    <string name="error_name_too_long">El nombre es demasiado corto (%1$d caracteres de %2$d)</string>
    <string name="image_missing">La imagen es obligatoria</string>
    <string name="sign_in_with_email">Continuar con Email</string>
    <string name="sign_in_with_google">Continuar con Google</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_up">Registrarse con esos datos</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="forgot_your_password">¿Olvidó su contraseña?</string>
    <string name="reset_password_link_sent">Se ha enviado un enlace para restablecer la contraseña al email indicado.</string>
    <string name="required">Obligatorio</string>
    <string name="sign_in_successful">Has iniciado la sesión</string>
    <string name="sign_in_unsuccessful">No se ha podido iniciar sesión, compruebe los datos</string>
    <string name="auth_invalid_email_pattern">Formato del email no válido</string>
    <string name="auth_user_collision_exception">Este correo electrónico ya está registrado</string>
    <string name="auth_weak_password_exception">La contraseña debe tener al menos 6 caracteres</string>
    <string name="my_ads_profile">Mis anuncios</string>
    <string name="configuration_profile">Configuración</string>
    <string name="publish_ad">Publicar anuncio</string>
    <string name="edit_ad">Editar anuncio</string>
    <string name="no_ads">No hay anuncios</string>
    <string name="action_publish_ad">Publicar</string>
    <string name="action_hide_ad">Ocultar</string>
    <string name="action_delete_ad">Borrar</string>
    <string name="open_chat">Abrir chat</string>
    <string name="ad_could_not_be_loaded">Este anuncio no está disponible</string>
    <string name="delete_my_account">Eliminar mi cuenta</string>
    <string name="dialog_delete_account_title">¿Quiere eliminar su cuenta?</string>
    <string name="delete_account_failed">La cuenta no se ha podido eliminar. Vuelva a iniciar sesión e inténtelo de nuevo</string>
    <string name="delete_account_success">Su cuenta ha sido eliminada con éxito.</string>
    <string name="cancel">Cancelar</string>
    <string name="apply">Aplicar</string>
    <string name="confirm">Confirmar</string>
    <string name="dialog_edit_password_title">Cambiar contraseña</string>
    <string name="dialog_edit_password_current">Contraseña actual</string>
    <string name="dialog_edit_password_new">Contraseña nueva</string>
    <string name="error_edit_password_invalid_current_password">La contraseña actual es incorrecta</string>
    <string name="dialog_edit_name_title">Cambiar nombre</string>
    <string name="dialog_edit_name_hint">Introduzca el nuevo nombre</string>
    <string name="password_changed_successfully">La contraseña se ha cambiado con éxito.</string>
    <string name="value_not_set_configuration">—</string>
    <string name="dialog_publish_ad">¿Quiere publicar el anuncio?</string>
    <string name="dialog_hide_ad">¿Quiere ocultar el anuncio?</string>
    <string name="dialog_delete_ad">¿Quiere borrar el anuncio?</string>
    <string name="status_successfully_updated">El estado del anuncio se ha actualizado correctamente.</string>
    <string name="error_operation_could_not_be_done">No se ha podido realizar la operación.</string>
    <string name="ad_successfully_edited">El anuncio se ha editado con éxito.</string>
    <string name="ad_successfully_deleted">El anuncio se ha borrado con éxito.</string>
    <string name="search_ads_hint">Buscar anuncio…</string>
    <string name="delete_for_everyone">Eliminar para todos</string>
    <string name="delete_for_me">Eliminar para mí</string>
    <string name="write_message_hint">Escriba el mensaje…</string>
    <string name="attach_a_file">Adjuntar un archivo</string>
    <string name="take_a_picture">Tomar una foto</string>
    <string name="send">Enviar</string>
    <string name="user_online">En línea</string>
    <string name="uploading_image">Cargando la imagen…</string>
    <string name="this_message_is_deleted">Este mensaje fue eliminado.</string>
    <string name="no_chats">No hay chats</string>
    <string name="search_chats_hint">Buscar chat…</string>
    <string name="notification_message_sent">%1$s: %2$s</string>
    <string name="notification_image_sent">%1$s te ha enviado una imagen.</string>
    <string name="notification_ad_published">Tu anuncio "%1$s" ha sido publicado.</string>
    <string name="notification_ad_deleted">Tu anuncio "%1$s" ha sido eliminado.</string>
    <string name="delete_profile_image">Borrar la foto</string>
    <string name="you_successfully_deleted_your_profile_picture">Ha eliminado con éxito su foto de perfil.</string>
    <string name="article_value">Valor del artículo</string>
    <string name="rating_required">El valor del artículo es obligatorio a establecer</string>
    <string name="no_access_to_internet">No hay acceso a Internet</string>
    <string name="app_info_author">IES Murgi, Denis Yushkin\ndyus859@g.educaand.es</string>
    <string name="app_info_developer">Desarrollador de la app</string>
</resources>