<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_edit_name_hint"
            android:inputType="text|textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/dimgray"
            android:text="@string/cancel"
            app:icon="@drawable/ic_baseline_cancel_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_apply_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/apply"
            app:icon="@drawable/ic_baseline_done_24" />

    </LinearLayout>

</LinearLayout>