<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/siv_logo_profile"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/logo_text2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_my_ads_profile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ads"
        android:text="@string/my_ads_profile"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/siv_logo_profile"
        app:layout_constraintVertical_bias="0.12"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_configuration_profile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/settings"
        android:text="@string/configuration_profile"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_my_ads_profile"
        app:layout_constraintVertical_bias="0.01"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_google"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/google_smaller"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_email"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/email_smaller"
        android:text="@string/sign_in_with_email"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="8dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_google"
        app:layout_constraintVertical_bias="0.01"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>