<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChatActivity">

    <!-- Header -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chat_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/chat_iv_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white"
                tools:ignore="ContentDescription" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/chat_iv_profile_picture"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_avatar"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded50" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/chat_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Profile Name"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold|normal"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/chat_user_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="Online"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold|normal"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <!-- Messages -->
    <LinearLayout
        android:id="@+id/chat_linear01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_below="@id/chat_toolbar"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_messages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="5"
            tools:listitem="@layout/item_message" />

    </LinearLayout>

    <!-- Bottom-->
    <LinearLayout
        android:id="@+id/chat_linear02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/chat_linear01"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@drawable/chat_bottom_shape">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:padding="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/chat_message_box"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="start|center_vertical"
                        android:hint="@string/write_message_hint"
                        android:importantForAutofill="no"
                        android:inputType="text|textMultiLine"
                        android:maxLines="10"
                        android:padding="5dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="NestedWeights" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/btn_chat_attach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:contentDescription="@string/attach_a_file"
                    android:src="@drawable/ic_baseline_attach_file_24"
                    app:tint="@color/charcoal_gray" />

                <ImageView
                    android:id="@+id/btn_chat_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:contentDescription="@string/take_a_picture"
                    android:src="@drawable/ic_baseline_photo_camera_24"
                    app:tint="@color/charcoal_gray" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/btn_chat_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/send"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_send_24"
            app:tint="@color/white" />

    </LinearLayout>

</RelativeLayout>